# Distributed-Compressor

./: CMakeLists.txt  README.md
DC-Handler/: CMakeLists.txt
DC-Handler/include/: CompressHandler.hxx  DC_Handler_ConfigLoader.hxx  TaskExecutor.hxx
DC-Handler/src/: CompressHandler.cxx  DC_Handler_ConfigLoader.cxx  main.cxx
DC-Interface/: CMakeLists.txt
DC-Interface/include/: DC_Interface_ConfigLoader.hxx  FileSeeker.hxx  RabbitMQ_TaskQueueClient.hxx  TaskPool.hxx  TaskQueueClient.hxx
DC-Interface/src/: DC_Interface_ConfigLoader.cxx  FileSeeker.cxx  RabbitMQ_TaskQueueClient.cxx  main.cxx
DC-Queue/: CMakeLists.txt
DC-Queue/include/: Client.hxx  ClientsManager.hxx  QueueManager.hxx  TaskQueue.hxx
DC-Queue/src/: Client.cxx  ClientsManager.cxx  QueueManager.cxx  TaskQueue.cxx  main.cxx
include/: CMakeLists.txt  ConfigLoader.hxx  DC_QueueChannel.hxx  DC_Queue_TaskQueueClient.hxx  JSON_FilePacker.hxx  QueueParams.hxx  RabbitMQ_TaskQueueClient.hxx  TaskPool.hxx  TaskQueueClient.hxx
include/ConfigLoading/: ConfigLoader.hxx
include/queue_input_strategy/: DC_Queue_QueueInputStrategy.hxx  QueueInputStrategy.hxx  RabbitMQ_QueueInputStrategy.hxx
src/: CMakeLists.txt  ConfigLoader.cxx  DC_QueueChannel.cxx  DC_Queue_TaskQueueClient.cxx  RabbitMQ_TaskQueueClient.cxx  TaskPool.cxx  TaskQueueClient.cxx
src/ConfigLoading/: ConfigLoader.cxx
